--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,11 @@
 			<artifactId>jjwt</artifactId>
 			<version>0.9.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+			<version>1.5.10.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<build>
