--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,3 +6,17 @@ spring:
     multipart:
       max-file-size: 1000MB
       max-request-size: 1000MB
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: ismaelmfb@gmail.com
+    password: Ismael21041998
+    properties:
+      mail:
+        smtp:
+          starttls:
+            enable: true
+            required: true
+          auth: true
+          connectiontimeout: 5000
+          writetimeout: 5000
