--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,8 +9,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: ismaelmfb@gmail.com
-    password: Ismael21041998
+    username: salesianas.nervion.reservas@gmail.com
+    password: Salesianas1234*
     properties:
       mail:
         smtp:
