Updated to use docker-compose

--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 	</parent>
 
 	<properties>
-		<docker.image.prefix>ismaelmasegosa</docker.image.prefix>
+		<docker.image.prefix>ismaelmase</docker.image.prefix>
 	
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
